<resources>
    <string name="main">Main</string>
    <string name="product_list">Product List</string>
    <string name="product_info">Product Info</string>
    <!-- Main -->
    <string name="app_name">YoungR2</string>
    <string name="edit_text_hint">식품 이름을 입력하세요</string>
    <string name="search_by_category">리스트에서 찾기</string>
    <string name="search_by_barcode">바코드로 찾기</string>

    <!-- Product List -->
    <string name="title_all_product">전체상품</string>
    <string name="data_road_error">데이터를 불러오는데 문제가 발생하였습니다.</string>
    <string name="reload_data"><u>다시 시도</u></string>
    <string name="no_data">검색한 상품이 존재하지 않습니다.</string>
    <string name="carbohydrate">탄수화물</string>
    <string name="protein">단백질</string>
    <string name="fat">지방</string>
    <string name="sugars">당류</string>
    <string name="salts">나트륨</string>
    <string name="cholesterol">콜레스테롤</string>
    <string name="saturated_fatty_acids">포화지방산</string>
    <string name="trans_fats">트랜스지방</string>

    <!-- Product Info -->
    <string name="title_product_info">상품정보</string>
    <string name="sub_title">영양 성분 (1회 제공량당)</string>
    <string name="total_content">총 내용량 %sG</string>
    <string name="kcal">%sKcal</string>
    <string name="g">%sg</string>
    <string name="mg">%smg</string>

    <!--Barcode-->
    <string name="scan_barcode">상품의 바코드를 스캔해주세요</string>

    <!-- snackbar -->
    <string name="request_input_text">식품이름을 검색해 주세요.</string>
    <string name="scan_canceled">상품 스캔 취소</string>
    <string name="camera_permission_required"> 카메라 권한이 필요합니다.</string>
    <!-- progressbar -->
    <string name="please_wait">잠시만 기다려주세요...</string>
    <!-- Alert dialog -->
    <string name="notification">Notification</string>
    <string name="ok">확인</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>