<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="mainLayout"
            type="com.example.youngr2.MainActivity" />
    </data>

    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_main_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_main_logo" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_search"
                style="@style/col_black_12_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:background="@drawable/bg_edit_text"
                android:drawableStart="@drawable/ic_search_24"
                android:gravity="start|center_vertical"
                android:hint="@string/edit_text_hint"
                android:textColorHint="@color/col_b5b5b5"
                android:imeOptions="actionSearch"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:inputType="text"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_search_from_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bg_gray_rec"
                android:gravity="center"
                android:layout_marginRight="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_receipt_long_36"
                    android:layout_marginTop="3dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_by_category"
                    style="@style/col_black_12_font"
                    android:padding="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_search_by_barcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bg_gray_rec"
                android:gravity="center"
                android:layout_marginLeft="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_barcode"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_by_barcode"
                    style="@style/col_black_12_font"
                    android:padding="5dp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>